# hamquiz

./: README.md  meson.build
.github/workflows/: meson_ci.yml
code/: app.c  app.h  main.c  meson.build
subprojects/: fossil-sdk.wrap  fossil-test.wrap
test/: generate-runner.py  meson.build  xtest_cases.c
